Moved handling of javac and java opts up to hat.java